[gd_scene load_steps=43 format=3 uid="uid://d0g482o7qfegi"]

[ext_resource type="Script" path="res://Player/Scripts/player_side.gd" id="1_nwayo"]
[ext_resource type="Texture2D" uid="uid://b5cihxyv02720" path="res://Player/Sprites/S_Placeholders/Idle (32x32).png" id="2_1t5hl"]
[ext_resource type="Texture2D" uid="uid://ciivm7nt3fvir" path="res://Player/Sprites/S_Placeholders/Jump (32x32).png" id="3_g3p7t"]
[ext_resource type="Texture2D" uid="uid://b8qoomrbdlvaj" path="res://Player/Sprites/S_Placeholders/Run (32x32).png" id="4_n2gwm"]
[ext_resource type="Texture2D" uid="uid://b5pv1830u4jou" path="res://Chests/Items/Health/HP_spreadsheet.png" id="5_ssbcy"]
[ext_resource type="Script" path="res://Player/animated_sprite_2d.gd" id="6_ica5r"]
[ext_resource type="Script" path="res://Player/hitbox_r.gd" id="7_oee3r"]
[ext_resource type="Script" path="res://Player/hitbox_l.gd" id="8_b6ovo"]
[ext_resource type="PackedScene" uid="uid://c7y4vl1gwhaga" path="res://Interaction components/interaction_component.tscn" id="9_yhub3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5qfv0"]
atlas = ExtResource("5_ssbcy")
region = Rect2(0, 0, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_j31gi"]
atlas = ExtResource("5_ssbcy")
region = Rect2(100, 150, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_tavy2"]
atlas = ExtResource("5_ssbcy")
region = Rect2(0, 150, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbutp"]
atlas = ExtResource("5_ssbcy")
region = Rect2(100, 75, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugb5b"]
atlas = ExtResource("5_ssbcy")
region = Rect2(0, 75, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbcys"]
atlas = ExtResource("5_ssbcy")
region = Rect2(100, 0, 100, 75)

[sub_resource type="SpriteFrames" id="SpriteFrames_guth3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qfv0")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j31gi")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tavy2")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbutp")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugb5b")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbcys")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2tsns"]
atlas = ExtResource("2_1t5hl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsejl"]
atlas = ExtResource("2_1t5hl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr6p7"]
atlas = ExtResource("2_1t5hl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3n3q"]
atlas = ExtResource("2_1t5hl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt6sf"]
atlas = ExtResource("2_1t5hl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uetv8"]
atlas = ExtResource("2_1t5hl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l43n"]
atlas = ExtResource("2_1t5hl")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r6qp"]
atlas = ExtResource("2_1t5hl")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovg34"]
atlas = ExtResource("2_1t5hl")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uff3j"]
atlas = ExtResource("2_1t5hl")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1y4v"]
atlas = ExtResource("2_1t5hl")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8o6a"]
atlas = ExtResource("3_g3p7t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbs3m"]
atlas = ExtResource("4_n2gwm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ls7u"]
atlas = ExtResource("4_n2gwm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2cvf"]
atlas = ExtResource("4_n2gwm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgngg"]
atlas = ExtResource("4_n2gwm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyfo3"]
atlas = ExtResource("4_n2gwm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hclgw"]
atlas = ExtResource("4_n2gwm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ja2"]
atlas = ExtResource("4_n2gwm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1hm"]
atlas = ExtResource("4_n2gwm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0req"]
atlas = ExtResource("4_n2gwm")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r2i7"]
atlas = ExtResource("4_n2gwm")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m37eh"]
atlas = ExtResource("4_n2gwm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wxnn"]
atlas = ExtResource("4_n2gwm")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jluqp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tsns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsejl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr6p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3n3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uetv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l43n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r6qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovg34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uff3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1y4v")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8o6a")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbs3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ls7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2cvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgngg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyfo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hclgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ja2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0req")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r2i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m37eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wxnn")
}],
"loop": true,
"name": &"running",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1xprf"]
radius = 11.0
height = 28.0

[node name="Player_Side" type="CharacterBody2D" groups=["player_side"]]
collision_layer = 131
collision_mask = 129
script = ExtResource("1_nwayo")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-229, -134)
sprite_frames = SubResource("SpriteFrames_guth3")
animation = &"5"
script = ExtResource("6_ica5r")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_jluqp")
autoplay = "default"
frame_progress = 0.170342

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_1xprf")

[node name="Dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Dash_cooldown" type="Timer" parent="."]
wait_time = 20.0

[node name="HitboxR" type="RayCast2D" parent="."]
target_position = Vector2(70, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("7_oee3r")

[node name="HitboxL" type="RayCast2D" parent="."]
target_position = Vector2(-70, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("8_b6ovo")

[node name="AC" type="Timer" parent="."]
wait_time = 0.25

[node name="InteractionComponent" parent="." instance=ExtResource("9_yhub3")]
position = Vector2(1, 2)

[node name="Damage" type="Timer" parent="."]
wait_time = 0.3

[connection signal="change_hp" from="." to="AnimatedSprite2D" method="_on_player_side_change_hp"]
[connection signal="dash_again" from="." to="." method="_on_dash_again"]
[connection signal="Player_Died" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_player_died"]
[connection signal="timeout" from="Dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="ready" from="Dash_cooldown" to="." method="_on_dash_cooldown_ready"]
[connection signal="timeout" from="Dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="enemy_detected_r" from="HitboxR" to="." method="_on_hitbox_r_enemy_detected_r"]
[connection signal="enemy_detected_l" from="HitboxL" to="." method="_on_hitbox_l_enemy_detected_l"]
[connection signal="timeout" from="AC" to="." method="_on_ac_timeout"]
[connection signal="timeout" from="Damage" to="." method="_on_damage_timeout"]
